# cw-axolotl

./: .gitignore  ADD_NEW_BACKEND.md  ARCHITECTURE.md  CODE_REVIEW.md  README.md  REFACTORING_SUMMARY.md  REVIEW_ACTION_PLAN.md  TEMPLATING_APPROACH.md  pyproject.toml
axolotl/: grpo_32b.yaml  grpo_config.yaml  sft_config.yaml
cw_cli/: __init__.py  cli.py  cluster.py  commands.py  config.py  display.py  pods.py  status.py  utils.py
cw_cli/config/: default_image.yaml
cw_cli/core/: __init__.py  commands.py  configuration.py  deployment.py  exceptions.py  framework.py  plugins.py  registry.py  resources.py  templating.py
cw_cli/kubeconfigs/: README.md  sft_job.yaml
cw_cli/kubeconfigs/axolotl/: .gitkeep  sft_job.yaml
cw_cli/kubeconfigs/axolotl/grpo/: .gitkeep  rewards-deployment.yaml  training-job.yaml
cw_cli/kubeconfigs/grpo/: rewards-deployment.yaml  training-job.yaml  vllm-deployment.yaml
cw_cli/kubeconfigs/verifiers/: eval-model.yaml  rewards-deployment.yaml  training-job.yaml  vllm-deployment.yaml
tests/: __init__.py
tests/integration/: __init__.py  test_architecture.py
tests/unit/: __init__.py  test_configuration.py  test_framework.py  test_registry.py
torchtune/: config.yaml
transformers/: config.yaml
verifiers/: conf.yaml  conf32b.yaml  conf4b.yaml
