[project]
name = "cw-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simple-parsing>=0.1.7",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
cw = "cw_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cw_cli*"]

[tool.setuptools.package-data]
cw_cli = ["kubeconfigs/*.yaml"]
